--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         .chart-box h2 {
             text-align: center;
         }
+
+        .fuente {
+            font-size: 10px;
+            text-align: center;
+        }
     </style>
     <script type="text/javascript">
         google.charts.load('current', { 'packages': ['corechart'] });
@@ -171,6 +176,13 @@
         <div class="chart-box">
             <h2>Pobreza vs Pobreza Extrema</h2>
             <div id="scatter_chart_top_10" style="width: 100%; height: 500px"></div>
+        </div>
+        <div class="fuente">
+            <p>Fuente de los datos: Los datos han sido extraídos del documento "Medición de la pobreza 2008-2018"
+                publicado por el Consejo Nacional de Evaluación de la Política de Desarrollo Social (CONEVAL).
+                Disponible en:
+                <a>https://www.coneval.org.mx/SalaPrensa/Comunicadosprensa/Documents/2019/COMUNICADO_10_MEDICION_POBREZA_2008_2018.pdf.</a>
+            </p>
         </div>
     </div>
 </body>
