--- a/index.html
+++ b/index.html
@@ -61,7 +61,14 @@
             var options1 = {
                 title: 'Evolución de Pobreza y Pobreza Extrema (2008-2018)',
                 curveType: 'function',
-                legend: { position: 'bottom' }
+                legend: { position: 'bottom' },
+                hAxis: {
+                    title: 'Año',
+                    format: '####'
+                },
+                vAxis: {
+                    title: 'Porcentaje (%)'
+                }
             };
 
             var chart1 = new google.visualization.LineChart(document.getElementById('line_chart'));
@@ -79,13 +86,17 @@
             ]);
 
             var options2 = {
-                title: 'Carencias Sociales en México (2008 vs 2018)',
-                isStacked: true,
-                legend: { position: 'bottom' }
+                title: 'Comparación de Carencias Sociales en México (2008 vs 2018)',
+                hAxis: { title: 'Indicador de Carencia' },
+                vAxis: { title: 'Porcentaje (%)' },
+                legend: { position: 'bottom' },
+                bar: { groupWidth: '75%' },
+                isStacked: false
             };
 
-            var chart2 = new google.visualization.AreaChart(document.getElementById('area_chart'));
+            var chart2 = new google.visualization.ColumnChart(document.getElementById('column_chart'));
             chart2.draw(data2, options2);
+
 
             // Gráfico de barras para pobreza por las 10 entidades federativas con mayor pobreza
             var data3 = google.visualization.arrayToDataTable([
@@ -163,7 +174,7 @@
         </div>
         <div class="chart-box">
             <h2>Carencias Sociales (2008 vs 2018)</h2>
-            <div id="area_chart" style="width: 100%; height: 500px"></div>
+            <div id="column_chart" style="width: 100%; height: 500px"></div>
         </div>
         <div class="chart-box">
             <h2>Pobreza por Entidad Federativa</h2>
